--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -97,7 +97,7 @@ ja:
       in: は%{count}の範囲に含めてください
       inclusion: は一覧にありません
       invalid: は不正な値です
-      invalid_username_format: アルファベット・数字・アンダースコア(_)のみ使用できます。
+      invalid_username_format: にはアルファベット・数字・アンダースコア(_)のみ使用できます。
       less_than: は%{count}より小さい値にしてください
       less_than_or_equal_to: は%{count}以下の値にしてください
       model_invalid: 'バリデーションに失敗しました: %{errors}'
