--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -106,6 +106,7 @@ ja:
       not_an_integer: は整数で入力してください
       odd: は奇数にしてください
       other_than: は%{count}以外の値にしてください
+      page_not_found: お探しのページは見つかりませんでした。
       present: は入力しないでください
       required: を入力してください
       taken: はすでに存在します
