--- a/config/locales/views/pickles.ja.yml
+++ b/config/locales/views/pickles.ja.yml
@@ -3,9 +3,12 @@ ja:
     new:
       create_pickle: 漬物を新規作成する
       created_pickle: 漬け物が作成されました。
+    edit:
+      edit_pickle: 漬け物情報を編集する
+      edited_pickle: 漬け物情報を編集しました。
     shared:
       links:
-        create_pickle: 漬物を新規作成する
         edit_pickle: 編集
+        create_pickle: 漬物を新規作成する
     show:
       title: "%{name}の漬け物"
