--- a/config/locales/models/sauce_material.ja.yml
+++ b/config/locales/models/sauce_material.ja.yml
@@ -1,7 +1,7 @@
 ja:
   activerecord:
     models:
-      sauce_material: 漬け汁・漬け床
+      sauce_material: 漬け汁・漬け床の材料
     attributes:
       sauce_material:
         name: 名前
