--- a/config/locales/views/pickles.ja.yml
+++ b/config/locales/views/pickles.ja.yml
@@ -4,6 +4,7 @@ ja:
       destroy_pickle: 漬け物を削除
       confirm: 本当によろしいですか？
     edit:
+      delete: 削除
       edit_pickle: 漬け物情報を編集する
       edited_pickle: 漬け物情報を編集しました。
     new:
