--- a/config/locales/views/journals.ja.yml
+++ b/config/locales/views/journals.ja.yml
@@ -6,4 +6,5 @@ ja:
       created_journal: 記録が投稿されました。
       destroy_journal: 記録を削除
       destroyed_journal: 記録を削除しました。
+      title: "%{name}の漬け物の記録"
 
