Layout pickle page

--- a/config/locales/views/devise.user.ja.yml
+++ b/config/locales/views/devise.user.ja.yml
@@ -3,6 +3,8 @@ ja:
     show:
       edit_profile: プロフィールを編集する
       edit_authentication_information: 認証情報を編集する
+      users_pickles: "%{name}の漬け物"
+      users_journals: "%{name}の漬け物の記録"
     visit_current_user_page: マイページ
     confirmations:
       confirmed: メールアドレスが確認できました。
