--- a/config/locales/views/pickles.ja.yml
+++ b/config/locales/views/pickles.ja.yml
@@ -18,4 +18,5 @@ ja:
         edit_pickle: 編集
         create_pickle: 漬物を新規作成する
     show:
-      title: "%{name}の漬け物"
+      pickles_recipe: "%{pickle}のレシピ"
+      pickles_journals: "%{pickle}の記録"
