--- a/config/locales/views/pickles.ja.yml
+++ b/config/locales/views/pickles.ja.yml
@@ -18,5 +18,6 @@ ja:
         edit_pickle: 編集
         create_pickle: 漬物を新規作成する
     show:
+      maker: 漬けたひと
       pickles_recipe: "%{pickle}のレシピ"
       pickles_journals: "%{pickle}の記録"
