--- a/config/locales/views/pickles.ja.yml
+++ b/config/locales/views/pickles.ja.yml
@@ -17,6 +17,7 @@ ja:
       links:
         edit_pickle: 編集
         create_pickle: 漬物を新規作成する
+      no_pickles_yet: まだ漬物がありません。
     show:
       maker: 漬けたひと
       journals: "記録"
