--- a/config/locales/views/pickles.ja.yml
+++ b/config/locales/views/pickles.ja.yml
@@ -6,6 +6,8 @@ ja:
     edit:
       edit_pickle: 漬け物情報を編集する
       edited_pickle: 漬け物情報を編集しました。
+    index:
+      title: みんなの漬け物一覧
     new:
       create_pickle: 漬物を新規作成する
       created_pickle: 漬け物が作成されました。
