--- a/config/locales/views/devise.user.ja.yml
+++ b/config/locales/views/devise.user.ja.yml
@@ -1,11 +1,5 @@
 ja:
   users:
-    show:
-      edit_profile: プロフィールを編集する
-      edit_authentication_information: 認証情報を編集する
-      users_pickles: "%{name}の漬け物"
-      users_journals: "%{name}の漬け物の記録"
-    visit_current_user_page: マイページ
     confirmations:
       confirmed: メールアドレスが確認できました。
       new:
@@ -61,6 +55,7 @@ ja:
         new_password: 新しいパスワード
       new:
         forgot_your_password: パスワードを忘れましたか？
+        reset_your_password: パスワードの再設定
         send_me_reset_password_instructions: パスワードの再設定方法を送信する
       no_token: このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。
       send_instructions: パスワードの再設定について数分以内にメールでご連絡いたします。
@@ -74,7 +69,7 @@ ja:
         cancel_my_account: アカウント削除
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
         leave_blank_if_you_don_t_want_to_change_it: 空欄のままなら変更しません
-        title: "%{resource}編集"
+        title: 認証情報を編集
         unhappy: 気に入りません
         update: 更新
         we_need_your_current_password_to_confirm_your_changes: 変更を反映するには現在のパスワードを入力してください
@@ -105,12 +100,19 @@ ja:
         sign_in_with_provider: "%{provider}でログイン"
         sign_up: アカウント登録
       minimum_password_length: "（%{count}文字以上）"
+    show:
+      edit_profile: プロフィールを編集する
+      edit_authentication_information: 認証情報を編集する
+      users_pickles: "%{name}の漬け物"
+      users_journals: "%{name}の漬け物の記録"
     unlocks:
       new:
         resend_unlock_instructions: アカウントのロック解除方法を再送する
+        unlock_account: アカウントのロック解除
       send_instructions: アカウントのロック解除方法を数分以内にメールでご連絡します。
       send_paranoid_instructions: アカウントが見つかった場合、アカウントのロック解除方法を数分以内にメールでご連絡します。
       unlocked: アカウントをロック解除しました。
+    visit_current_user_page: マイページ
   errors:
     messages:
       already_confirmed: は既に登録済みです。ログインしてください。
