--- a/config/locales/views/devise.user.ja.yml
+++ b/config/locales/views/devise.user.ja.yml
@@ -68,6 +68,8 @@ ja:
         are_you_sure: 本当によろしいですか？
         cancel_my_account: アカウント削除
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
+        if_you_delete_your_account_all_pickles_and_journals_you_have_created_will_also_be_deleted: アカウントを削除すると、作成した漬け物や記録もすべて削除されます。
+        it_cannot_be_restored: 元に戻すことはできません。
         leave_blank_if_you_don_t_want_to_change_it: 空欄のままなら変更しません
         title: 認証情報を編集
         unhappy: 気に入りません
